--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -9,27 +9,27 @@ import { SKILLS } from "../lib/constants.ts";
   title="👨‍💻 Skills"
 >
   <div class="mt-3">
-    <ul
-      data-cursor="text"
-      class="pl-4 2xl:space-y-2 text-base text-black dark:text-white"
-    >
+    <div class="grid 2xl:grid-cols-1 grid-cols-2  gap-3">
       {
         SKILLS.map((skill) => (
-          <li class="flex items-center gap-2 group">
-            <span class="text-lg text-black dark:text-white">
-              •
+          <div class="flex items-center gap-2 group transition-all duration-300 hover:translate-x-1">
+            <div class="w-2 h-2 rounded-full bg-orange-600 dark:bg-indigo-500"></div>
+            <span class="text-sm sm:text-base font-medium text-black dark:text-white">
+              {skill.name}
             </span>
-            {skill.name}
-          </li>
+          </div>
         ))
       }
-    </ul>
-    <p
-      class="text-base text-gray-400 dark:text-gray-100 mt-0 2xl:mt-7 italic border-l-4 dark:border-indigo-500 border-orange-600 pl-3"
-      data-cursor="text"
-    >
-      Además de programar, me gusta mucho el fútbol, los videojuegos y la
-      música.
-    </p>
+    </div>
+    
+    <div class="mt-6 p-3 rounded-lg bg-orange-50 dark:bg-[#1a1a1a] border-l-4 dark:border-indigo-500 border-orange-600">
+      <p
+        class="text-sm text-gray-700 dark:text-gray-300 italic"
+        data-cursor="text"
+      >
+        Además de programar, me gusta mucho el fútbol, los videojuegos y la
+        música.
+      </p>
+    </div>
   </div>
 </Card>
